Change namespace, replace sms with email